# shieldagi

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT.md  README.md  SHIELDAGI_FULL_BUILD.md
agents/attack-executor/: agent.toml
agents/code-auditor/: agent.toml
agents/recon-scout/: agent.toml
agents/shield-remediator/: agent.toml
agents/vuln-reporter/: agent.toml
chain-walls/django/: chain_walls.py
chain-walls/express/: chain-walls.middleware.js
deploy/: docker-compose.production.yml  nginx.conf  setup.sh
docs/: AGENT_REFERENCE.md  ARCHITECTURE.md  CHAIN_WALLS.md  DEPLOYMENT.md  HAND_REFERENCE.md  OPENFANG_FORK_GUIDE.md  PLAYBOOKS.md  QUICK_START.md  TOOL_REFERENCE.md
frontend/: .env.local.example  package.json  tailwind.config.ts
playbooks/: auth_remediation.md  csrf_remediation.md  dependency_remediation.md  idor_remediation.md  misconfig_remediation.md  rate_limit_remediation.md  sqli_remediation.md  ssrf_remediation.md  traversal_remediation.md  xss_remediation.md
sandbox/: Dockerfile.pentest  docker-compose.yml
tests/: self-audit.sh
tools/: Cargo.toml
tools/src/: brute_force.rs  chain_walls_injector.rs  cli.rs  config.rs  continuous_loop.rs  csrf_test.rs  dep_audit.rs  dep_monitor.rs  framework_detect.rs  header_audit.rs  idor_test.rs  incident_engine.rs  lib.rs  log_analyzer.rs  nmap_scan.rs  path_traverse.rs  pr_generator.rs  remediation_engine.rs  remediation_pipeline.rs  report_types.rs  rls_validate.rs  secret_scan.rs  semgrep_scan.rs  sentinel_runtime.rs  sqlmap_attack.rs  ssrf_probe.rs  telegram_alert.rs  verify_fix.rs  xss_inject.rs
(+91 files in other folders)
